# agent-fabric

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: otel-collector-config.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_LAYERS.md  CODE_MAP.md  PLAN.md  RESTART.md  RUNBOOK.md  SETUP_MAC.md  SETUP_WINDOWS.md  SLACK_SETUP.md
fixtures/echo_a2a/: pyproject.toml
fixtures/echo_a2a/echo_a2a/: server.py
fixtures/echo_mcp/: pyproject.toml
fixtures/echo_mcp/echo_mcp/: server.py
fixtures/writer_a2a/: pyproject.toml
fixtures/writer_a2a/writer_a2a/: server.py
libs/fabric_common/: pyproject.toml
libs/fabric_common/fabric_common/: __init__.py  config.py
libs/fabric_common/fabric_common/auth/: __init__.py  jwt.py  tokens.py
libs/fabric_common/fabric_common/governance/: __init__.py  audit.py  opa.py  pep.py  ratelimit.py
libs/fabric_common/fabric_common/models/: __init__.py  entries.py  governance.py  tasks.py
libs/fabric_common/fabric_common/registry_client/: __init__.py  client.py
libs/fabric_common/fabric_common/telemetry/: __init__.py  otel.py
policies/: authz.rego
scripts/: test.sh
services/broker/: pyproject.toml
services/broker/broker_svc/: chat_orchestrator.py  conversation_store.py  dispatch.py  main.py  orchestrator.py  router.py  store.py
services/chatbot/: pyproject.toml
services/chatbot/chatbot_svc/: broker_client.py  dedupe.py  main.py
services/gateway_a2a/: pyproject.toml
services/gateway_a2a/gateway_a2a_svc/: handler.py  main.py
services/gateway_mcp/: pyproject.toml
services/gateway_mcp/gateway_mcp_svc/: governance.py  main.py  proxy.py
services/registry/: alembic.ini  pyproject.toml
services/registry/alembic/: env.py
services/registry/alembic/versions/: 0001_initial.py
services/registry/registry_svc/: api.py  cards.py  db.py  main.py  orm.py  probe.py  repository.py  service.py  settings.py
tests/: conftest.py  test_auth.py  test_contract.py  test_e2e.py
