[project]
name = "agent-fabric"
version = "0.1.0"
description = "Open-source Agent Fabric — control plane for A2A agents and MCP tools"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["libs/*", "services/*", "fixtures/*"]

[tool.uv.sources]
fabric-common = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
