[project]
name = "echo-a2a"
version = "0.1.0"
description = "Sample A2A agent fixture for exercising the Agent Fabric"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[fastapi]>=1.1,<2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echo_a2a"]
