[project]
name = "echo-mcp"
version = "0.1.0"
description = "Sample MCP tool server fixture for exercising the Agent Fabric"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echo_mcp"]
