[project]
name = "writer-a2a"
version = "0.1.0"
description = "LLM-backed A2A writing-assistant fixture for the Agent Fabric"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[fastapi]>=1.1,<2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["writer_a2a"]
