[project]
name = "fabric-common"
version = "0.1.0"
description = "Shared library for the Agent Fabric control plane"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "httpx>=0.27,<0.29",
    "asyncpg>=0.29",
    # OpenTelemetry (traces + OTLP export)
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    # auth (Phase 2+)
    "pyjwt[crypto]>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fabric_common"]
