[project]
name = "broker"
version = "0.1.0"
description = "Agent Fabric — Broker (domain grouping + LLM routing + dispatch)"
requires-python = ">=3.11"
dependencies = [
    "fabric-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "fastmcp>=3.0,<4",
    "sse-starlette>=2.1",
]

[tool.uv.sources]
fabric-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["broker_svc"]
