[project]
name = "chatbot"
version = "0.1.0"
description = "Agent Fabric — Slack Socket Mode frontend (thin bridge to broker /chat)"
requires-python = ">=3.11"
dependencies = [
    "fabric-common",
    "slack-bolt>=1.28",
    "slack-sdk>=3.40",
    "aiohttp>=3.10",
    "httpx>=0.27",
]

[tool.uv.sources]
fabric-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatbot_svc"]
