[project]
name = "gateway-a2a"
version = "0.1.0"
description = "Agent Fabric — A2A governance gateway (Omni-Gateway replacement, A2A side)"
requires-python = ">=3.11"
dependencies = [
    "fabric-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "a2a-sdk[fastapi]>=1.1,<2",
    "sse-starlette>=2.1",
]

[tool.uv.sources]
fabric-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway_a2a_svc"]
