[project]
name = "registry"
version = "0.1.0"
description = "Agent Fabric — Registry service"
requires-python = ">=3.11"
dependencies = [
    "fabric-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "a2a-sdk[fastapi]>=1.1,<2",
    "fastmcp>=3.0,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "greenlet>=3.0",
    "alembic>=1.13",
]

[tool.uv.sources]
fabric-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["registry_svc"]
